--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "node test/test.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "bin"
   ],
   "license": "Apache-2.0",
   "type": "commonjs",
