--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,6 +6,8 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v3
         id: release
@@ -25,7 +27,7 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
       - run: npm test
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm publish
+      - run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.DOLBEAR_PUBLISH}}
         if: ${{ steps.release.outputs.release_created }}
