fix: move the publish workflow to its own thing and use different tokens

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -10,22 +10,6 @@ jobs:
       - uses: GoogleCloudPlatform/release-please-action@v3
         id: release
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SALTY_PIG_TOKEN }}
           release-type: node
           package-name: dolbear
-
-      - uses: actions/checkout@v3
-        if: ${{ steps.release.outputs.release_created }}
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          registry-url: 'https://registry.npmjs.org'
-        if: ${{ steps.release.outputs.release_created }}
-      - run: npm ci
-        if: ${{ steps.release.outputs.release_created }}
-      - run: npm test
-        if: ${{ steps.release.outputs.release_created }}
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.DOLBEAR_PUBLISH}}
-        if: ${{ steps.release.outputs.release_created }}
